name:                Acarya
version:             0.1.0.0
synopsis: In memory push message server
description: Acarya is a solution for a push message server for companies
             who want full control over the software they use.
license:             MIT
license-file:        LICENSE
author:              Sasa Bogicevic
maintainer:          t4nt0r@pm.me
copyright:           2019 Sasa Bogicevic
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules: Types
                 , Server.Server
                 , Server.Api
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , text
                     , bytestring
                     , binary
                     , containers
                     , unordered-containers
                     , mtl
                     , transformers
                     , time
                     , stm
                     , stm-chans
                     , async
                     , servant
                     , servant-server
                     , http-client
                     , http-types
                     , wai
                     , warp
                     , warp-tls
                     , aeson
                     , network-simple
  hs-source-dirs:      src
  ghc-options: -Wall -Werror -Wredundant-constraints -Wmissing-monadfail-instances
  default-extensions: LambdaCase OverloadedStrings RecordWildCards
  default-language:    Haskell2010
